--- a/Flock/Base.lproj/Main.storyboard
+++ b/Flock/Base.lproj/Main.storyboard
@@ -22,13 +22,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zeU-mO-eqx" customClass="FBSDKLoginButton">
-                                <rect key="frame" x="164" y="476" width="46" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zeU-mO-eqx" customClass="FBSDKLoginButton">
+                                <rect key="frame" x="164" y="318.5" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="zeU-mO-eqx" firstAttribute="centerY" secondItem="Brv-Zu-HOH" secondAttribute="centerY" id="hvN-RN-Ncr"/>
                             <constraint firstItem="zeU-mO-eqx" firstAttribute="centerX" secondItem="Brv-Zu-HOH" secondAttribute="centerX" id="lYY-dM-SiX"/>
                         </constraints>
                     </view>
@@ -415,12 +416,121 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="zRN-hp-r5Y">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Kbr-0A-LI2"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Kbr-0A-LI2">
+                            <connections>
+                                <segue destination="AN1-Og-FJJ" kind="popoverPresentation" popoverAnchorBarButtonItem="Kbr-0A-LI2" id="3Kg-Mt-uiv">
+                                    <popoverArrowDirection key="popoverArrowDirection" up="YES"/>
+                                </segue>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="tQw-9w-IY5">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sJe-UR-PIj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2992.8000000000002" y="-310.79460269865069"/>
+        </scene>
+        <!--Search People Table View Controller-->
+        <scene sceneID="pYR-s7-D8W">
+            <objects>
+                <tableViewController id="AN1-Og-FJJ" customClass="SearchPeopleTableViewController" customModule="Flock" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="53" sectionHeaderHeight="28" sectionFooterHeight="28" id="zKX-Vo-Qly">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="thz-hj-Wcm">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="143"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bkz-nd-bPh">
+                                    <rect key="frame" x="8" y="105" width="46" height="30"/>
+                                    <state key="normal" title="Button"/>
+                                    <connections>
+                                        <action selector="popSearchPeopleTableViewController:" destination="AN1-Og-FJJ" eventType="touchUpInside" id="FcS-fz-kJ1"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="bkz-nd-bPh" firstAttribute="leading" secondItem="thz-hj-Wcm" secondAttribute="leadingMargin" id="BCY-8m-df7"/>
+                                <constraint firstItem="bkz-nd-bPh" firstAttribute="bottom" secondItem="thz-hj-Wcm" secondAttribute="bottomMargin" id="X0c-uA-Awj"/>
+                            </constraints>
+                        </view>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SEARCH" id="Kca-Ln-3uO" customClass="SearchTableViewCell" customModule="Flock" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="171" width="375" height="53"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Kca-Ln-3uO" id="ZII-dq-g3R">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="52"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z22-Fd-Dmq">
+                                            <rect key="frame" x="8" y="8" width="49" height="37"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="49" id="84u-if-EZh"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKu-JK-AQL">
+                                            <rect key="frame" x="65" y="17" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66v-TW-fN3">
+                                            <rect key="frame" x="321" y="12" width="46" height="30"/>
+                                            <state key="normal" title="Button"/>
+                                            <connections>
+                                                <action selector="acceptButtonPressed:" destination="Kca-Ln-3uO" eventType="touchUpInside" id="cgF-oW-N2q"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R1e-aY-FgL">
+                                            <rect key="frame" x="267" y="12" width="46" height="30"/>
+                                            <state key="normal" title="Button"/>
+                                            <connections>
+                                                <action selector="rejectButtonPressed:" destination="Kca-Ln-3uO" eventType="touchUpInside" id="AkN-Xc-47C"/>
+                                            </connections>
+                                        </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sta-xD-T1b">
+                                            <rect key="frame" x="217" y="17" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Z22-Fd-Dmq" firstAttribute="leading" secondItem="ZII-dq-g3R" secondAttribute="leadingMargin" id="28J-d8-G5I"/>
+                                        <constraint firstItem="R1e-aY-FgL" firstAttribute="baseline" secondItem="66v-TW-fN3" secondAttribute="baseline" id="Gfs-oY-wmg"/>
+                                        <constraint firstItem="Sta-xD-T1b" firstAttribute="centerY" secondItem="R1e-aY-FgL" secondAttribute="centerY" id="JPj-xI-TfJ"/>
+                                        <constraint firstItem="AKu-JK-AQL" firstAttribute="baseline" secondItem="Sta-xD-T1b" secondAttribute="baseline" id="NBZ-IK-fZr"/>
+                                        <constraint firstItem="66v-TW-fN3" firstAttribute="leading" secondItem="R1e-aY-FgL" secondAttribute="trailing" constant="8" symbolic="YES" id="ZLu-83-ckV"/>
+                                        <constraint firstItem="Z22-Fd-Dmq" firstAttribute="centerY" secondItem="R1e-aY-FgL" secondAttribute="centerY" id="aVn-3k-iie"/>
+                                        <constraint firstItem="Z22-Fd-Dmq" firstAttribute="centerY" secondItem="ZII-dq-g3R" secondAttribute="centerY" id="ee8-YC-oOR"/>
+                                        <constraint firstItem="Z22-Fd-Dmq" firstAttribute="top" secondItem="ZII-dq-g3R" secondAttribute="topMargin" id="fex-L5-ArQ"/>
+                                        <constraint firstItem="AKu-JK-AQL" firstAttribute="leading" secondItem="Z22-Fd-Dmq" secondAttribute="trailing" constant="8" symbolic="YES" id="fhW-WA-8nb"/>
+                                        <constraint firstItem="R1e-aY-FgL" firstAttribute="leading" secondItem="Sta-xD-T1b" secondAttribute="trailing" constant="8" symbolic="YES" id="hlI-WU-j55"/>
+                                        <constraint firstItem="66v-TW-fN3" firstAttribute="trailing" secondItem="ZII-dq-g3R" secondAttribute="trailingMargin" id="ru2-A2-J4m"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="acceptButton" destination="66v-TW-fN3" id="glI-eK-sid"/>
+                                    <outlet property="name" destination="AKu-JK-AQL" id="WPe-b3-dQZ"/>
+                                    <outlet property="profilePic" destination="Z22-Fd-Dmq" id="ZEj-rl-uv6"/>
+                                    <outlet property="rejectButton" destination="R1e-aY-FgL" id="4Ab-Ub-tMe"/>
+                                    <outlet property="statusLabel" destination="Sta-xD-T1b" id="XAj-dH-QgA"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="AN1-Og-FJJ" id="x08-DG-fab"/>
+                            <outlet property="delegate" destination="AN1-Og-FJJ" id="2ub-b0-MEF"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ubs-rk-Vq3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3957.5999999999999" y="-311.69415292353824"/>
         </scene>
     </scenes>
     <resources>
