--- a/Flock/Base.lproj/Main.storyboard
+++ b/Flock/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1212" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="31f-4a-ta2">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11760" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="31f-4a-ta2">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11755"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -97,6 +97,7 @@
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" alpha="0.40000000000000002" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rrc-PW-Sp2">
                                             <rect key="frame" x="0.0" y="0.0" width="170" height="170"/>
+                                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </imageView>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="followers icon" translatesAutoresizingMaskIntoConstraints="NO" id="8H9-oa-ydW">
                                             <rect key="frame" x="144" y="140" width="18" height="22"/>
@@ -535,66 +536,67 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SEARCH" id="Kca-Ln-3uO" customClass="SearchTableViewCell" customModule="Flock" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="53"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SEARCH" rowHeight="75" id="f8t-HM-XCC" customClass="SearchTableViewCell" customModule="Flock" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="75"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Kca-Ln-3uO" id="ZII-dq-g3R">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="52"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="f8t-HM-XCC" id="jIs-Nu-lw7">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="74"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z22-Fd-Dmq">
-                                            <rect key="frame" x="8" y="8" width="49" height="37"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8uY-89-r7m">
+                                            <rect key="frame" x="8" y="11" width="54" height="54"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="49" id="84u-if-EZh"/>
+                                                <constraint firstAttribute="height" constant="54" id="4sz-y3-PxR"/>
+                                                <constraint firstAttribute="width" constant="54" id="psO-Wj-1gO"/>
+                                                <constraint firstAttribute="width" secondItem="8uY-89-r7m" secondAttribute="height" multiplier="1:1" id="xWd-yv-D10"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKu-JK-AQL">
-                                            <rect key="frame" x="65" y="17" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zbz-BX-sZh">
+                                            <rect key="frame" x="70" y="13" width="53" height="28"/>
+                                            <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="20"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mGb-Ab-MaF">
+                                            <rect key="frame" x="70" y="39" width="37" height="21"/>
+                                            <fontDescription key="fontDescription" name="OpenSans-Light" family="Open Sans" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="66v-TW-fN3">
-                                            <rect key="frame" x="321" y="12" width="46" height="30"/>
-                                            <state key="normal" title="Button"/>
+                                            <rect key="frame" x="318" y="22" width="49" height="30"/>
+                                            <state key="normal" title="Accept"/>
                                             <connections>
-                                                <action selector="acceptButtonPressed:" destination="Kca-Ln-3uO" eventType="touchUpInside" id="cgF-oW-N2q"/>
+                                                <action selector="acceptButtonPressed:" destination="f8t-HM-XCC" eventType="touchUpInside" id="HAR-cV-NaW"/>
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R1e-aY-FgL">
-                                            <rect key="frame" x="267" y="12" width="46" height="30"/>
-                                            <state key="normal" title="Button"/>
+                                            <rect key="frame" x="267" y="22" width="43" height="30"/>
+                                            <state key="normal" title="Reject"/>
                                             <connections>
-                                                <action selector="rejectButtonPressed:" destination="Kca-Ln-3uO" eventType="touchUpInside" id="AkN-Xc-47C"/>
+                                                <action selector="rejectButtonPressed:" destination="f8t-HM-XCC" eventType="touchUpInside" id="tZR-kd-Lui"/>
                                             </connections>
                                         </button>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sta-xD-T1b">
-                                            <rect key="frame" x="217" y="17" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="Z22-Fd-Dmq" firstAttribute="leading" secondItem="ZII-dq-g3R" secondAttribute="leadingMargin" id="28J-d8-G5I"/>
-                                        <constraint firstItem="R1e-aY-FgL" firstAttribute="baseline" secondItem="66v-TW-fN3" secondAttribute="baseline" id="Gfs-oY-wmg"/>
-                                        <constraint firstItem="Sta-xD-T1b" firstAttribute="centerY" secondItem="R1e-aY-FgL" secondAttribute="centerY" id="JPj-xI-TfJ"/>
-                                        <constraint firstItem="AKu-JK-AQL" firstAttribute="baseline" secondItem="Sta-xD-T1b" secondAttribute="baseline" id="NBZ-IK-fZr"/>
-                                        <constraint firstItem="66v-TW-fN3" firstAttribute="leading" secondItem="R1e-aY-FgL" secondAttribute="trailing" constant="8" symbolic="YES" id="ZLu-83-ckV"/>
-                                        <constraint firstItem="Z22-Fd-Dmq" firstAttribute="centerY" secondItem="R1e-aY-FgL" secondAttribute="centerY" id="aVn-3k-iie"/>
-                                        <constraint firstItem="Z22-Fd-Dmq" firstAttribute="centerY" secondItem="ZII-dq-g3R" secondAttribute="centerY" id="ee8-YC-oOR"/>
-                                        <constraint firstItem="Z22-Fd-Dmq" firstAttribute="top" secondItem="ZII-dq-g3R" secondAttribute="topMargin" id="fex-L5-ArQ"/>
-                                        <constraint firstItem="AKu-JK-AQL" firstAttribute="leading" secondItem="Z22-Fd-Dmq" secondAttribute="trailing" constant="8" symbolic="YES" id="fhW-WA-8nb"/>
-                                        <constraint firstItem="R1e-aY-FgL" firstAttribute="leading" secondItem="Sta-xD-T1b" secondAttribute="trailing" constant="8" symbolic="YES" id="hlI-WU-j55"/>
-                                        <constraint firstItem="66v-TW-fN3" firstAttribute="trailing" secondItem="ZII-dq-g3R" secondAttribute="trailingMargin" id="ru2-A2-J4m"/>
+                                        <constraint firstItem="66v-TW-fN3" firstAttribute="trailing" secondItem="jIs-Nu-lw7" secondAttribute="trailingMargin" id="1PE-iG-aJT"/>
+                                        <constraint firstItem="zbz-BX-sZh" firstAttribute="centerY" secondItem="jIs-Nu-lw7" secondAttribute="centerY" multiplier="0.7" id="6CP-X0-Lkm"/>
+                                        <constraint firstItem="R1e-aY-FgL" firstAttribute="centerY" secondItem="jIs-Nu-lw7" secondAttribute="centerY" id="G2u-S8-gHT"/>
+                                        <constraint firstItem="R1e-aY-FgL" firstAttribute="baseline" secondItem="66v-TW-fN3" secondAttribute="baseline" id="JSY-Dg-sXG"/>
+                                        <constraint firstItem="66v-TW-fN3" firstAttribute="leading" secondItem="R1e-aY-FgL" secondAttribute="trailing" constant="8" symbolic="YES" id="KXU-dk-A5R"/>
+                                        <constraint firstItem="8uY-89-r7m" firstAttribute="centerY" secondItem="jIs-Nu-lw7" secondAttribute="centerY" id="S7B-Wi-V5t"/>
+                                        <constraint firstItem="mGb-Ab-MaF" firstAttribute="leading" secondItem="zbz-BX-sZh" secondAttribute="leading" id="dVO-ju-dnT"/>
+                                        <constraint firstItem="8uY-89-r7m" firstAttribute="leading" secondItem="jIs-Nu-lw7" secondAttribute="leadingMargin" id="lOT-iz-nxn"/>
+                                        <constraint firstItem="mGb-Ab-MaF" firstAttribute="top" secondItem="zbz-BX-sZh" secondAttribute="bottom" constant="-2" id="lmn-fd-htP"/>
+                                        <constraint firstItem="zbz-BX-sZh" firstAttribute="leading" secondItem="8uY-89-r7m" secondAttribute="trailing" constant="8" symbolic="YES" id="zqa-Mb-Ka4"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="acceptButton" destination="66v-TW-fN3" id="glI-eK-sid"/>
-                                    <outlet property="name" destination="AKu-JK-AQL" id="WPe-b3-dQZ"/>
-                                    <outlet property="profilePic" destination="Z22-Fd-Dmq" id="ZEj-rl-uv6"/>
-                                    <outlet property="rejectButton" destination="R1e-aY-FgL" id="4Ab-Ub-tMe"/>
-                                    <outlet property="statusLabel" destination="Sta-xD-T1b" id="XAj-dH-QgA"/>
+                                    <outlet property="acceptButton" destination="66v-TW-fN3" id="AzV-z7-5oc"/>
+                                    <outlet property="name" destination="zbz-BX-sZh" id="dIW-62-CqH"/>
+                                    <outlet property="profilePic" destination="8uY-89-r7m" id="A8c-He-Psb"/>
+                                    <outlet property="rejectButton" destination="R1e-aY-FgL" id="pFW-Dj-zCz"/>
+                                    <outlet property="statusLabel" destination="mGb-Ab-MaF" id="4BZ-r1-Xa8"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
