--- a/Flock/PopupSubViewController.xib
+++ b/Flock/PopupSubViewController.xib
@@ -70,11 +70,11 @@
                     <constraints>
                         <constraint firstItem="93f-NF-nyy" firstAttribute="top" secondItem="IS1-mO-qkH" secondAttribute="top" id="1yf-ZF-XH5"/>
                         <constraint firstAttribute="trailing" secondItem="HLy-g9-Jlm" secondAttribute="trailing" constant="8" id="4kl-i4-vdu"/>
+                        <constraint firstAttribute="trailing" secondItem="R0S-Vr-o45" secondAttribute="trailing" id="6aB-W9-4ea"/>
                         <constraint firstItem="HLy-g9-Jlm" firstAttribute="top" secondItem="Fe7-aa-iik" secondAttribute="bottom" id="Gxo-6N-bef"/>
                         <constraint firstItem="Fe7-aa-iik" firstAttribute="top" secondItem="93f-NF-nyy" secondAttribute="bottom" id="Sah-X1-jOa"/>
                         <constraint firstItem="R0S-Vr-o45" firstAttribute="leading" secondItem="IS1-mO-qkH" secondAttribute="leading" id="Uzr-sE-u9u"/>
                         <constraint firstAttribute="trailing" secondItem="Fe7-aa-iik" secondAttribute="trailing" constant="8" id="XiB-C8-kz8"/>
-                        <constraint firstAttribute="trailing" secondItem="R0S-Vr-o45" secondAttribute="trailing" id="f61-ls-T7T"/>
                         <constraint firstItem="R0S-Vr-o45" firstAttribute="top" secondItem="HLy-g9-Jlm" secondAttribute="bottom" id="h7C-fY-n6N"/>
                         <constraint firstItem="93f-NF-nyy" firstAttribute="leading" secondItem="IS1-mO-qkH" secondAttribute="leading" id="iPW-J0-uX5"/>
                         <constraint firstItem="HLy-g9-Jlm" firstAttribute="leading" secondItem="IS1-mO-qkH" secondAttribute="leading" id="k9a-Yc-ZPj"/>
